Rename plugins-java-base project to plugins-java and add JavaPlugin to it

--- a/.teamcity/subprojects.json
+++ b/.teamcity/subprojects.json
@@ -679,8 +679,8 @@
     "crossVersionTests": false
   },
   {
-    "name": "plugins-java-base",
-    "path": "platforms/jvm/plugins-java-base",
+    "name": "plugins-java",
+    "path": "platforms/jvm/plugins-java",
     "unitTests": true,
     "functionalTests": true,
     "crossVersionTests": false
